Fixed some issues on mobile, test on main page

--- a/src/shared/layouts/default/styles/header.scss
+++ b/src/shared/layouts/default/styles/header.scss
@@ -1,7 +1,7 @@
 .header {
     .main-nav {
         display: flex;
-        padding: 2rem 0;
+        padding: 2rem 0 0;
 
         &__item {
             font-size: 1.6rem;
